--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,7 @@
 }
 
 /* 图片放大的浮层 */
-div[data-rmiz-modal-overlay='visible'] {
+div[data-rmiz-modal-overlay="visible"] {
   @apply bg-background/80;
 }
 
