--- a/app/globals.css
+++ b/app/globals.css
@@ -66,10 +66,20 @@
 }
 
 /* 图片放大的浮层 */
-div[data-rmiz-modal-overlay="visible"] {
+div[data-rmiz-modal-overlay='visible'] {
   @apply bg-background/80;
 }
 
 button[data-rmiz-btn-unzoom] {
   @apply hidden;
+}
+
+/* 滚动锚点 */
+.prose h1,
+.prose h2,
+.prose h3,
+.prose h4,
+.prose h5,
+.prose h6 {
+  scroll-margin-top: 15vh;
 }
